Fixed layout problems for mobile, also removed autosuggestions for my input fields

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ header > img {
 #main-search {
 	width: 100vw;
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
+	grid-template-columns: repeat(1, 1fr);
 	grid-row-gap: 1rem;
 	grid-column-gap: 1rem;
 	overflow-x: hidden;
@@ -277,5 +277,8 @@ footer {
 	}
 	footer {
 		align-items: end;
+	}
+	#main-search {
+		grid-template-columns: repeat(5, 1fr);
 	}
 }
